# module_main

./: .gitignore  CMakeLists.txt  README.md  test_main.cpp
include/: API.h  DataBase.h  router.h
src/: API.cpp  API.h  CheckToken.cpp  CheckToken.h  Database.cpp  FindToken.h  HandleClient.cpp  HandleClient.h  SimpleFunctions.h  getAddress.cpp  getAddress.h  main.cpp  router.cpp
tests/: test_main.cpp
